--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Welcome to my Website</p>    
+    <p id="welcomeText">Welcome to my Website</p>
+    <script src="script.js"></script>
+
 </body>
 </html>
